[Enhancement] support more spm function (#58913)
Signed-off-by: Seaven <seaven_7@qq.com>